crates/quarto-markdown-pandoc/snapshots/error-corpus/text/002.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: error_output
---
[31mError:[0m Parse error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mresources/error-corpus/002.qmd:1:19[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mA[0m[38;5;249m [0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249md[0m[38;5;249m [0m[38;5;249m[[0m[38;5;249ma[0m[38;5;249mt[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mb[0m[38;5;249mu[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249m][0m[38;5;249m{[0m[31m[[0m
 [38;5;240m  │[0m                   [31m┬[0m  
 [38;5;240m  │[0m                   [31m╰[0m[31m─[0m[31m─[0m unexpected character or token here
[38;5;246m───╯[0m

Error: Parse error
unexpected character or token here
