crates/quarto-markdown-pandoc/snapshots/error-corpus/text/003.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: error_output
---
[31mError:[0m [Q-2-3] Key-value Pair Before Class Specifier in Attribute
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mresources/error-corpus/003.qmd:1:21[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249mf[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249m][0m[38;5;249m{[0m[38;5;249m#[0m[38;5;249mi[0m[38;5;249md[0m[38;5;249m [0m[36mk[0m[36me[0m[36my[0m[36m=[0m[36mv[0m[36ma[0m[36ml[0m[36mu[0m[36me[0m[38;5;249m [0m[31m.[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249ma[0m[38;5;249ms[0m[38;5;249ms[0m[38;5;249m}[0m
 [38;5;240m  │[0m           [36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m┬[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m [31m┬[0m  
 [38;5;240m  │[0m               [36m╰[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m This key-value pair cannot appear before the class specifier.
 [38;5;240m  │[0m                     [31m│[0m  
 [38;5;240m  │[0m                     [31m╰[0m[31m─[0m[31m─[0m This class specifier appears after the key-value pair.
[38;5;246m───╯[0m
