crates/quarto-markdown-pandoc/snapshots/error-corpus/text/004.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: error_output
---
[31mError:[0m [Q-2-4] Missing Space After Div Fence
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m]8;;file:///Users/cscheid/repos/github/cscheid/kyoto/crates/quarto-markdown-pandoc/resources/error-corpus/004.qmd#1:4\resources/error-corpus/004.qmd:1:4]8;;\[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [36m:[0m[36m:[0m[36m:[0m[31m{[0m[38;5;249m.[0m[38;5;249mc[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mu[0m[38;5;249mt[0m[38;5;249m-[0m[38;5;249mn[0m[38;5;249mo[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249m}[0m
 [38;5;240m  │[0m [36m─[0m[36m┬[0m[36m─[0m[31m┬[0m  
 [38;5;240m  │[0m  [36m╰[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m This div fence needs a space before the attribute.
 [38;5;240m  │[0m    [31m│[0m  
 [38;5;240m  │[0m    [31m╰[0m[31m─[0m[31m─[0m A space is required after ':::' when specifying div attributes.
 [38;5;240m  │[0m    [36m│[0m  
 [38;5;240m  │[0m    [36m╰[0m[36m─[0m[36m─[0m Add a space here before the attribute.
[38;5;246m───╯[0m

[31mError:[0m Parse error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m]8;;file:///Users/cscheid/repos/github/cscheid/kyoto/crates/quarto-markdown-pandoc/resources/error-corpus/004.qmd#5:4\resources/error-corpus/004.qmd:5:4]8;;\[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249m:[0m[38;5;249m:[0m[38;5;249m:[0m
 [38;5;240m  │[0m    [31m┬[0m  
 [38;5;240m  │[0m    [31m╰[0m[31m─[0m[31m─[0m unexpected character or token here
[38;5;246m───╯[0m

[31mError:[0m Parse error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m]8;;file:///Users/cscheid/repos/github/cscheid/kyoto/crates/quarto-markdown-pandoc/resources/error-corpus/004.qmd#6:1\resources/error-corpus/004.qmd:5:5]8;;\[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249m:[0m[38;5;249m:[0m[38;5;249m:[0m
 [38;5;240m  │[0m     [31m│[0m 
 [38;5;240m  │[0m     [31m╰[0m[31m─[0m unexpected character or token here
[38;5;246m───╯[0m
