crates/quarto-markdown-pandoc/snapshots/error-corpus/text/006.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: error_output
---
[31mError:[0m [Q-2-7] Unclosed Single Quote
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mresources/error-corpus/006.qmd:1:45[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [36m'[0m[38;5;249mT[0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mh[0m[38;5;249me[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249ms[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mo[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mk[0m[38;5;249me[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mo[0m[38;5;249mp[0m[38;5;249mh[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249ma[0m[38;5;249mk[0m[38;5;249me[0m[38;5;249ms[0m[38;5;249m.[0m
 [38;5;240m  │[0m [36m┬[0m                                           [31m┬[0m  
 [38;5;240m  │[0m [36m╰[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m This is the opening quote. If you need an apostrophe, escape it with a backslash.
 [38;5;240m  │[0m                                             [31m│[0m  
 [38;5;240m  │[0m                                             [31m╰[0m[31m─[0m[31m─[0m I reached the end of the block before finding a closing "'" for the quote.
[38;5;246m───╯[0m
